Fix color contrast issues

--- a/static/sass/_theme.scss
+++ b/static/sass/_theme.scss
@@ -1278,7 +1278,7 @@ a[href].tag-inline:not(.tag-borderless),
 	background-color: #e4e4f1;
 }
 .tag-social--reply {
-	color: #8c890f;
+	color: #535100;
 	background-color: #edf1e4;
 }
 /* End social proof pill */
